--- a/blocks/announcement/__text/announcement__text.css
+++ b/blocks/announcement/__text/announcement__text.css
@@ -2,8 +2,15 @@
   display: flex;
   flex-direction: column;
   color: #fff;
-  padding: 90px 0 90px;
-  width: 55.8%;
-  height: 457px;
+  padding: 90px 0 90px 360px;
+  min-height: 457px;
   align-items: flex-end;
+  background-color: #FE4600;
+  grid-area: text;
+}
+
+@media screen and (max-width: 1750px) {
+  .announcement__text {
+
+  }
 }
