--- a/blocks/announcement/announcement.css
+++ b/blocks/announcement/announcement.css
@@ -1,8 +1,17 @@
 .announcement {
   width: 100%;
   max-width: 1920px;
-  display: flex;
+  display: grid;
+  grid-template-areas: "text image";
   position: relative;
+  margin: 0, auto;
   justify-content: center;
-  background-color: #FE4600;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 1750px) {
+  .announcement {
+    grid-template-areas: "image"
+      "text";
+  }
 }
