--- a/blocks/cpu/cpu.css
+++ b/blocks/cpu/cpu.css
@@ -3,4 +3,7 @@
   font-family: 'Loos', sans-serif;
   color: #021F49;
   min-height: 1009px;
+  margin: 0, auto;
+  display: flex;
+  justify-content: flex-start;
 }
