--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,12 @@
 .header {
   display: grid;
   font-family: Verdana, sans-serif;
-  grid-template-columns: 183px 352px 534px;
+  grid-template-columns: 183px 352px 543px;
   grid-template-areas:
   "logo nav contacts";
   padding: 19px 0;
   max-width: 1200px;
   margin: 0 auto;
   place-items: center;
-  grid-gap: 5.4%;
+  gap: 65px;
 }
